# vivarium_inputs

./: .gbd_ms_functions.py.swo  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Jenkinsfile  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  artifact_reader.py  gbd_ms_auxiliary_functions.py  gbd_ms_functions.py  pyproject.toml  requirements.txt  setup.py  test_get_draws.py  tox.ini  util.py
.github/workflows/: build.yml  deploy.yml
TESTS_TO_IMPLEMENT/extract/: test_core.py  test_extract.py  test_get_measure.py  (+1 more)
ceam_inputs/: __init__.py  auxiliary_files.py  core.py  cube.py  data_artifact.py  distibutions.py  distributions.py  gbd.py  gbd_config.yaml  gbd_mapping.py  gbd_ms_auxiliary_functions.py  gbd_ms_functions.py  interface.py  risk_factor_correlation.py  util.py  utilities.py
cen_functions_scripts/: get_all_cause_mortality_rate.do  get_all_cause_mortality_rate_draws.do  get_codem_mortality_rates.do  get_draws.do  get_exposures.do  get_modelable_entity_draws.do  get_pafs.do  get_populations.do  get_relative_risks.do
ci/: travis-before-install.sh  travis-test.sh
docs/: Makefile  gbd_ms_auxiliary_functions.rst  gbd_ms_functions.rst  nitpick-exceptions
gbd_mapping_generator/: cause_builder.py  data.py  risk_builder.py  template_builder.py  util.py
scripts/: build_artifact.py  build_mapping.py  clear_cache.py
tests/: conftest.py  mocked_gbd.py  test_core.py  test_cube.py  test_data_artifact.py  test_data_artifact_builder.py  test_distributions.py  test_forecasting.py  test_interface.py  test_util.py  test_utilities.py
(+121 files in other folders)
